# test-alpaca

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: .gitignore
.github/workflows/: code-quality.yml  docker.yml  documentation.yml  publish.yml
docs/: api.md  index.md
src/test_alpaca/: __init__.py  cli.py
tests/: test_cli.py
